starting test prune/refactor

--- a/src/encoded/schemas/project.json
+++ b/src/encoded/schemas/project.json
@@ -82,6 +82,18 @@
             "format": "uri",
             "lookup": 70
         },
+        "viewing_group": {
+            "title": "View access group",
+            "description": "The group that determines which set of data the user has permission to view.",
+            "type": "string",
+            "lookup": 100,
+            "enum": [
+                "4DN",
+                "Not 4DN",
+                "NOFIC",
+                "CvDC"
+            ]
+        },
         "pi": {
             "title": "P.I.",
             "description": "Principle Investigator of the project.",
