--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ env:
   - ELASTIC_BEANSTALK_LABEL=$TRAVIS_COMMIT
   - USER="4dn-dcic"
   - SNO_REPO="snovault"
+  - ES_VERSION=5.4.1
+  - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.deb
 matrix:
   include:
   - python: '3.4'
@@ -50,6 +52,7 @@ before_install:
 - nvm install 10
 - node --version
 - npm config set python /usr/bin/python2.7
+- curl -O  ${ES_DOWNLOAD_URL} && sudo dpkg -i --force-confnew elasticsearch-${ES_VERSION}.deb && sudo service elasticsearch stop
 install:
 # need to manually change the version of six used by Travis for some reason
 - pip uninstall -y six
@@ -58,7 +61,7 @@ install:
 - pip install codacy-coverage
 - pip install -U zc.buildout setuptools
 - buildout bootstrap
-- bin/buildout || (echo "Retrying buildout" && bin/buildout )
+- bin/buildout
 - pip show pytest
 - pip install pytest==2.9.1
 - pip show pytest
@@ -101,6 +104,11 @@ after_success:
   ]; then\n            echo \"Job succeeded! PUBLISHING to ${tibanna_deploy} environment...\"\n
   \           eb use ${tibanna_deploy} --debug\n            python deploy/deploy_beanstalk.py\n
   \        fi\n      fi\n     fi\n   fi\n  fi\n"
+- |
+  if [[ $TRAVIS_BRANCH == 'master' ]]; then
+  echo 'Triggering docs build'
+  curl -X POST -d "branches=master" -d "token=$DOCS_TOKEN" https://readthedocs.org/api/v2/webhook/cgap-portal/100087/
+  fi
 after_failure:
 - python deploy/travis_after_all.py https://api.travis-ci.org
 - export $(cat .to_export_back) >> /dev/null
