Add configure_kibana_index command and use it in travis before_script

--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,8 @@ install:
 - pip show pytest
 - pip install pytest==2.9.1
 - pip show pytest
+before_script:
+- bin/configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
 - if test -n "$NPM"; then npm test; fi
 # setone is essentially all tests that are not indexing; change here for clarity
