--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -10,9 +10,9 @@ packages:
     mod24_ssl: []
 
 container_commands:
-  01_nodejs_install:
+  00_nodejs_install:
     command: "curl --silent --location https://rpm.nodesource.com/setup_10.x | sudo bash - && yum install nodejs -y && node --version >> /var/log/deploy.log"
-  015_setup_wsgi_home:
+  01_setup_wsgi_home:
     command: "mkdir -p /home/wsgi && chown wsgi:wsgi /home/wsgi"
   02_setup_apache:
     command: cp .ebextensions/encoded-apache.conf /etc/httpd/conf.d/encoded-apache.conf
@@ -34,6 +34,7 @@ container_commands:
     command: cat /dev/urandom | head -c 256 | base64 > session-secret.b64
   06_buildout:
     command: "source /opt/python/run/venv/bin/activate && bin/buildout -c beanstalk.cfg  >> /var/log/deploy.log"
+    ignoreErrors: true
   07_elastic_search_mapping:
     command: "bin/create-mapping-on-deploy production.ini --app-name app &> /var/log/create_mapping.log"
     leader_only: true
