Move indexer namespace to production.ini template

--- a/production.ini.in
+++ b/production.ini.in
@@ -11,6 +11,7 @@ indexer.processes = ${indexer_processes}
 elasticsearch.server = ${elasticsearch_instance}
 snovault.app_version = ${encoded_version}
 env.name = ${env_name}
+indexer.namespace = ${env_name}
 encoded_version = ${encoded_version}
 mpindexer = ${mpindexer}
 indexer = ${indexer}
