--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,8 +30,8 @@ auto-checkout = snovault
 		dcicutils
 
 [sources]
-snovault = git https://github.com/4dn-dcic/snovault.git rev=v1.3.5
-dcicutils = git https://github.com/4dn-dcic/utils.git rev=0.8.1
+snovault = git https://github.com/4dn-dcic/snovault.git rev=es_item
+dcicutils = git https://github.com/4dn-dcic/utils.git rev=0.8.5
 jsonschema = git https://github.com/4dn-dcic/jsonschema_serialize_fork.git
 subprocess_middleware = git https://github.com/4dn-dcic/subprocess_middleware.git
 subprocess-middleware-node = git https://github.com/4dn-dcic/subprocess-middleware-node.git egg=false
