Updated lock file. Fix testing to set up npm.

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ before_script:
 - bin/configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
 # setone is essentially all tests that are not indexing; change here for clarity
+- make npm-setup
 - travis_wait 30 bin/test -v -v --aws-auth -m "working" --durations=10
   --cov src/encoded --es search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80;
 after_script:
