--- a/.travis.yml
+++ b/.travis.yml
@@ -48,17 +48,18 @@ install:
 - pip install six==1.11.0
 - pip install coveralls
 - pip install codacy-coverage
-- pip install -U zc.buildout setuptools
-- buildout bootstrap
-- bin/buildout || (echo "Retrying buildout" && bin/buildout )
-- pip show pytest
-- pip install pytest==2.9.1
-- pip show pytest
+- poetry install
+- make npm-setup
+#- pip install -U zc.buildout setuptools
+#- buildout bootstrap
+#- bin/buildout || (echo "Retrying buildout" && bin/buildout )
+#- pip show pytest
+#- pip install pytest==2.9.1
+#- pip show pytest
 before_script:
 - bin/configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
 # setone is essentially all tests that are not indexing; change here for clarity
-- make npm-setup
 - travis_wait 30 bin/test -v -v --aws-auth -m "working" --durations=10
   --cov src/encoded --es search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80;
 after_script:
