WIP: Initial cut at a large swath of files for poetry.

--- a/deploy/ini_files/cgaptest.ini
+++ b/deploy/ini_files/cgaptest.ini
@@ -1,17 +1,25 @@
 [app:app]
 use = config:base.ini#app
 session.secret = %(here)s/session-secret.b64
-file_upload_bucket = elasticbeanstalk-encoded-4dn-files
-blob_bucket = elasticbeanstalk-encoded-4dn-blobs
-#blob_store_profile_name = encoded-4dn-files
-accession_factory = encoded.server_defaults.test_accession
-indexer.processes =
-elasticsearch.server = 172.31.49.128:9872
-snovault.app_version = 1.3.0
-ga_config_location = ./src/encoded/static/ga_config.json
+file_upload_bucket = elasticbeanstalk-fourfront-cgaptest-files
+file_wfout_bucket = elasticbeanstalk-fourfront-cgaptest-wfoutput
+blob_bucket = elasticbeanstalk-fourfront-cgaptest-blobs
+system_bucket = elasticbeanstalk-fourfront-cgaptest-system
+# blob_store_profile_name = encoded-4dn-files
+accession_factory = encoded.server_defaults.enc_accession
+indexer.processes = $(python3 -c 'import multiprocessing; print(max(1, multiprocessing.cpu_count() - 2));')
+elasticsearch.server = search-fourfront-cgaptest-dxiczz2zv7f3nshshvevcvmpmy.us-east-1.es.amazonaws.com:80
+snovault.app_version = v-c58ad18
+env.name = fourfront-cgaptest
+indexer.namespace = fourfront-cgaptest
+encoded_version = v-c58ad18
+mpindexer = true
+indexer = true
+elasticsearch.aws_auth = true
+production = true
 
-create_tables = true
 load_test_data = encoded.loadxl:load_test_data
+sqlalchemy.url = postgresql://${RDS_USERNAME}:${RDS_PASSWORD}@${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
 
 [composite:indexer]
 use = config:base.ini#indexer
@@ -67,4 +75,4 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(levelname)s [%(name)s][%(threadName)s] %(message)s
+format = %(message)s
