Update requirements based on what fourfront likes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,69 +35,47 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.4,<3.7"
-apipkg = "1.4"
-attr = "0.1.0"
-attrs = "16.3.0"
+python = ">=3.5,<3.7"
+# apipkg = "1.4"
+# attrs = "16.3.0"
 # aws-requests-auth = "0.4.1"
-aws-requests-auth = ">=0.4.2,<1"
 # awscli = "1.15.42"
-awscli = "^1.15.42"
-"backports.functools-lru-cache" = "1.2.1"
-bcrypt = "3.1.6"
-beautifulsoup4 = "4.4.1"
+# bcrypt = "3.1.6"
+# beautifulsoup4 = "4.4.1"
 # boto3 = "1.7.42"
 boto3 = "^1.10.46"
 # botocore = "1.10.42"
 botocore = "^1.13.46"
 certifi = "2018.4.16"
-cffi = "1.6.0"
+ # We don't use cffi explicitly, so let's just try omitting it. It creates dependency clashes. -kmp 1-Mar-2020
+ # cffi = "1.6.0"
 chardet = "3.0.4"
-click = "6.7"
 "collective.recipe.cmd" = "0.11"
 "collective.recipe.modwsgi" = "2.1"
 "collective.recipe.template" = "1.13"
 colorama = "0.3.3"
 coverage = "4.0.3"
-cryptacular = "1.4.1"
+# This cryptacular support might need to stay pinned because of dropped support for 3.4 in later versions,
+# but we don't think we need it any more, so maybe we can do without? -kmp 28-Feb-2020
+# cryptacular = "1.4.1"
 dcicutils = "0.9.3b0"
-dcicsnovault = "2.0.0b13"
+dcicsnovault = "2.0.2b1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
-# enum34 = "1.1.6"
 execnet = "1.4.1"
 flaky = "3.6.1"
-funcsigs = "1.0.2"
 future = "0.15.2"
-# futures = "3.0.5"
-futures = "^3.1.1"
-# We got compatibility problems using a version greater than 1,
-# yet this is not used explicitly at all.
-# Maybe used implicitly by pytest? -kmp 17-Feb-2020
-# 1.0b8 and 0.9999999 (seven 9's) are the same release.
-# After that, in 0.99999999 (eight 9's) = 1.0b9, incompatible changes to handling of _base occur.
-# Ref: https://pypi.org/project/html5lib/
-# We need to pin that version or adjust something so that this error doesn't happen:
-# lib/python3.5/site-packages/_pytest/config.py:322: in _importconftest
-#    raise ConftestImportFailure(conftestpath, sys.exc_info())
-#E   _pytest.config.ConftestImportFailure: (local('.../gap-portal1/src/encoded/tests/conftest.py'),
-#        (<class 'AttributeError'>, AttributeError("module 'html5lib.treebuilders' has no attribute '_base'",), ...)
-# The actual bug here was specifying the "^" since it's not safe to assume semantic versioning for this library.
-# html5lib = "^1.0b8"
-# html5lib = "0.9999999"
 humanfriendly = "1.44.5"
 # hupper = "1.4.2"
-hupper = "^1.5"
+hupper = "1.5"
 idna = "2.7"
 isodate = "0.5.4"
 jmespath = "0.9.0"
 jsonschema-serialize-fork = "2.1.1"
 keepalive = "0.5"
 loremipsum = "1.0.5"
-MarkupSafe = "0.23"
-mock = "2.0.0"
-# "mr.developer" = "1.38"
+# mr-developer = "1.38"
 netaddr = "0.7.18"
 passlib = "1.6.5"
 PasteDeploy = "1.5.2"
@@ -112,37 +90,35 @@ py = "1.4.31"
 pyasn1 = "0.1.9"
 PyBrowserID = "0.10.0"
 pycparser = "2.14"
-Pygments = "2.1.3"
 PyJWT = "1.5.3"
 pyparsing = "2.1.1"
-pyramid-debugtoolbar = "3.0.1"
+# Is this pyramid needed? cgap-portal didn't need it.
+# pyramid = "1.10.1"
 pyramid-localroles = "0.1"
-pyramid-mako = "1.0.2"
 pyramid-multiauth = "0.8.0"
 pyramid-retry = "1.0"
 pyramid-tm = "2.2.1"
 pyramid-translogger = "0.1"
-pytest = "2.9.1"
+# Hoping for bug fix in pytest = "2.9.1"
+pytest = "2.9.2"
 pytest-cov = "2.2.1"
 pytest-exact-fixtures = "0.1"
 pytest-instafail = "0.3.0"
 pytest-mock = "0.11.0"
-pytest-runner = "4.0"
 pytest-timeout = "1.0.0"
 pytest-xdist = "1.14"
 # python-dateutil = "2.5.1"
-python-dateutil = "^2.5.3"
+python-dateutil = "2.5.3"
 python-magic = "0.4.12"
-# pytz = "2016.3"
 pytz = ">=2016.3"
-PyYAML = "3.12"
+# Snovault has been updated to use PyYAML 5, and needs it for testing only.
+# We don't use the yaml package that PyYAML provides at all, so I'm just omitting this. -kmp 1-Mar-2020
+# PyYAML = "3.12"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
 "repoze.debug" = "1.0.2"
-"repoze.lru" = "0.6"
 # requests = "2.20.0"
 requests = "^2.21.0"
-requests-aws4auth = "0.9"
 # rfc3987 = "1.3.5"
 rfc3987 = "^1.3.6"
 rsa = "3.3"
@@ -151,14 +127,14 @@ rutter = "0.2"
 s3transfer = "^0.2.0"
 # simplejson = "3.8.2"
 simplejson = "^3.17.0"
+# six = "1.11.0"
 SPARQLWrapper = "1.7.6"
 SQLAlchemy = "1.2.16"
 # strict-rfc3339 = "0.6"
-strict-rfc3339 = ">=0.7,<1"
 # structlog = "18.1.0"
 structlog = ">=18.1.0,<20"
+submit4dn = "0.9.7"
 subprocess-middleware = "0.3"
-# subprocess32 = "3.2.7"
 # Useful for picking apart pyproject.toml
 toml = ">=0.10.0,<1"
 transaction = "2.4.0"
@@ -166,7 +142,6 @@ translationstring = "1.3"
 # urllib3 = "1.23"
 urllib3 = "^1.24.3"
 venusian = "1.2.0"
-voluptuous = "0.11.1"
 waitress = "1.2.0"
 WebOb = "1.8.5"
 # WebTest = "2.0.20"
@@ -176,13 +151,17 @@ WSGIProxy2 = "0.4.2"
 # xlrd = "0.9.4"
 xlrd = "^1.0.0"
 xlwt = "1.2.0"
-# "zc.recipe.egg" = "2.0.5"
+# zc-recipe.egg = "2.0.5"
 "zope.deprecation" = "4.4.0"
 "zope.interface" = "4.6.0"
 # "zope.sqlalchemy" = "1.1"
 "zope.sqlalchemy" = "^1.2"
 
+
 [tool.poetry.dev-dependencies]
+# flask only for moto[server]
+flask = ">=1.1.1"
+moto = ">=1.3.14"
 # # pytest = "4.5.0"
 # pytest = ""
 # # pytest-cov = "2.7.1"
@@ -199,34 +178,37 @@ xlwt = "1.2.0"
 # responses = "^0"
 
 [tool.poetry.scripts]
+# snovault commands
 batchupgrade = "snovault.batchupgrade:main"
 create-mapping = "snovault.elasticsearch.create_mapping:main"
-dev-servers = "encoded.dev_servers:main"
 es-index-listener = "snovault.elasticsearch.es_index_listener:main"
+wipe-test-indices = "snovault.commands.wipe_test_indices:main"
+# encoded commands
 add-date-created = "encoded.commands.add_date_created:main"
 check-rendering = "encoded.commands.check_rendering:main"
-extract-test-data = "encoded.commands.extract_test_data:main"
-es-index-data = "encoded.commands.es_index_data:main"
-owl-to-items = "encoded.commands.generate_items_from_owl:main"
+clear-db-es-contents = "encoded.commands.clear_db_es_contents:main"
+configure-kibana-index = "encoded.commands.configure_kibana_index:main"
+create-mapping-on-deploy = "encoded.commands.create_mapping_on_deploy:main"
+dev-servers = "encoded.dev_servers:main"
 dis2pheno = "encoded.commands.parse_hpoa:main"
-load-items = "encoded.commands.load_items:main"
-import-data = "encoded.commands.import_data:main"
+es-index-data = "encoded.commands.es_index_data:main"
 export-data = "encoded.commands.export_data:main"
+extract-test-data = "encoded.commands.extract_test_data:main"
+import-data = "encoded.commands.import_data:main"
 jsonld-rdf = "encoded.commands.jsonld_rdf:main"
-migrate-files-aws = "encoded.commands.migrate_files_aws:main"
-profile = "encoded.commands.profile:main"
-spreadsheet-to-json = "encoded.commands.spreadsheet_to_json:main"
+load-access-keys = "encoded.commands.load_access_keys:main"
+load-data = "encoded.commands.load_data:main"
+load-items = "encoded.commands.load_items:main"
 migrate-attachments-aws = "encoded.commands.migrate_attachments_aws:main"
 migrate-dataset-type = "encoded.commands.migrate_dataset_type:main"
-load-data = "encoded.commands.load_data:main"
-clear-db-es-contents = "encoded.commands.clear_db_es_contents:main"
-load-access-keys = "encoded.commands.load_access_keys:main"
-verify-item = "encoded.commands.verify_item:main"
-create-mapping-on-deploy = "encoded.commands.create_mapping_on_deploy:main"
-update-inserts-from-server = "encoded.commands.update_inserts_from_server:main"
+migrate-files-aws = "encoded.commands.migrate_files_aws:main"
+owl-to-items = "encoded.commands.generate_items_from_owl:main"
+profile = "encoded.commands.profile:main"
 run-upgrade-on-inserts = "encoded.commands.run_upgrader_on_inserts:main"
-configure-kibana-index = "encoded.commands.configure_kibana_index:main"
-wipe-test-indices = "snovault.commands.wipe_test_indices:main"
+spreadsheet-to-json = "encoded.commands.spreadsheet_to_json:main"
+update-inserts-from-server = "encoded.commands.update_inserts_from_server:main"
+verify-item = "encoded.commands.verify_item:main"
+
 
 [paste.app_factory]
 main = "encoded:main"
