--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -52,6 +52,8 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python deploy/generate_production_ini.py"
   0696_pip_install_encoded:
     command: "source /opt/python/run/venv/bin/activate && python setup_eb.py develop"
+  0699_env_check:
+    command: "echo ENV_NAME=$ENV_NAME"
   0700_clear_db_es_contents:
     command: "source /opt/python/run/venv/bin/activate && clear-db-es-contents production.ini --app-name app --skip-es --env cgap-mastertest >> /var/log/deploy.log"
     leader_only: true
