--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -53,10 +53,10 @@ container_commands:
   0696_pip_install_encoded:
     command: "source /opt/python/run/venv/bin/activate && python setup_eb.py develop"
   0700_clear_db_es_contents:
-    command: "source /opt/python/run/venv/bin/activate && clear-db-es-contents production.ini --app-name app --skip-es --env cgap-mastertest >> /var/log/deploy.log"
+    command: "source /opt/python/run/venv/bin/activate && clear-db-es-contents production.ini --app-name app --skip-es --env fourfront-cgaptest >> /var/log/deploy.log"
     leader_only: true
   0810_elastic_search_mapping:
-    command: "source /opt/python/run/venv/bin/activate && create-mapping-on-deploy production.ini --app-name app --clear-queue &> /var/log/create_mapping.log; sleep 2"
+    command: "source /opt/python/run/venv/bin/activate && create-mapping-on-deploy production.ini --app-name app --clear-queue &> /var/log/create_mapping.log"
     leader_only: true
   0820_load_dummy_data:
     command: "source /opt/python/run/venv/bin/activate && load-data production.ini --app-name app >> /var/log/deploy.log"
@@ -64,8 +64,10 @@ container_commands:
   0830_load_access_keys:
     command: "source /opt/python/run/venv/bin/activate && load-access-keys production.ini --app-name app >> /var/log/deploy.log"
     leader_only: true
-  0900_restart_apache:
-    command: "sudo service httpd restart"
+  0900_stop_apache:
+    command: "sudo service httpd stop && echo 'stopped http service'"
+  0901_start_apache:
+    command: "sudo service httpd start && echo 'started httpd service'"
 
 
 option_settings:
