Set deploy/generate_production_ini.py to be ready for a cgap- name switchover. Make 20_packages.config more like fourfront.

--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -64,11 +64,8 @@ container_commands:
   0830_load_access_keys:
     command: "source /opt/python/run/venv/bin/activate && load-access-keys production.ini --app-name app >> /var/log/deploy.log"
     leader_only: true
-  0900_stop_apache:
-    command: "sudo service httpd stop && echo 'stopped http service'"
-  0901_start_apache:
-    command: "sudo service httpd start && echo 'started httpd service'"
-
+  0900_restart_apache:
+    command: "sudo service httpd restart"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
