--- a/src/encoded/schemas/project.json
+++ b/src/encoded/schemas/project.json
@@ -4,7 +4,7 @@
     "$schema": "http://json-schema.org/draft-04/schema#",
     "required": ["name", "title"],
     "identifyingProperties": ["uuid", "name", "title", "aliases"],
-    "additionalProperties": true,
+    "additionalProperties": false,
     "mixinProperties": [
         { "$ref": "mixins.json#/schema_version" },
         { "$ref": "mixins.json#/uuid" },
