Set up to allow EB_APP_VERSION environment variable in deploy/ini_files. Fix pytest.ini to test things in deploy/. Add develop-eggs to the things that 'make clean' cleans.

--- a/deploy/ini_files/cgap.ini
+++ b/deploy/ini_files/cgap.ini
@@ -9,10 +9,10 @@ system_bucket = elasticbeanstalk-fourfront-cgap-system
 accession_factory = encoded.server_defaults.enc_accession
 indexer.processes = $(python3 -c 'import multiprocessing; print(max(1, multiprocessing.cpu_count() - 2));')
 elasticsearch.server = search-fourfront-cgap-ewf7r7u2nq3xkgyozdhns4bkni.us-east-1.es.amazonaws.com:80
-snovault.app_version = v-c58ad18
+snovault.app_version = ask-pip
 env.name = fourfront-cgap
 indexer.namespace = fourfront-cgap
-encoded_version = v-c58ad18
+encoded_version = ${EB_APP_VERSION}
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = true
