--- a/deploy/ini_files/cgapwolf.ini
+++ b/deploy/ini_files/cgapwolf.ini
@@ -9,10 +9,10 @@ system_bucket = elasticbeanstalk-fourfront-cgapwolf-system
 accession_factory = encoded.server_defaults.enc_accession
 indexer.processes = $(python3 -c 'import multiprocessing; print(max(1, multiprocessing.cpu_count() - 2));')
 elasticsearch.server = search-fourfront-cgapwolf-r5kkbokabymtguuwjzspt2kiqa.us-east-1.es.amazonaws.com:80
-snovault.app_version = v-c58ad18
+snovault.app_version = ask-pip
 env.name = fourfront-cgapwolf
 indexer.namespace = fourfront-cgapwolf
-encoded_version = v-c58ad18
+encoded_version = ${EB_APP_VERSION}
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = true
