--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ chardet = "3.0.4"
 colorama = "0.3.3"
 coverage = "4.0.3"
 dcicutils = ">=0.13.2,<1"
-dcicsnovault = "^2.1.2"
+dcicsnovault = "2.1.2b0"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
