--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@ beanstalk.cfg
 /src/encoded/tests/data/temp-local-inserts/*
 !/src/encoded/tests/data/temp-local-inserts/.gitkeep
 
+/bin
+!/bin/test
+!/bin/test.py
+!/bin/macpoetry-install
+
 *.swp
 *.hprof
 *.DS_Store
