Rename get_version() to get_app_version(). Rename the EB_APP_VERSION environment variable during .ini creation to just APP_VERSION.

--- a/deploy/ini_files/cgap.ini
+++ b/deploy/ini_files/cgap.ini
@@ -13,7 +13,7 @@ snovault.app_version = ask-pip
 env.name = fourfront-cgap
 indexer.namespace = fourfront-cgap
 encoded_version = ${PROJECT_VERSION}
-eb_app_version = ${EB_APP_VERSION}
+eb_app_version = ${APP_VERSION}
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = true
