--- a/deploy/ini_files/cgapdev.ini
+++ b/deploy/ini_files/cgapdev.ini
@@ -13,7 +13,7 @@ snovault.app_version = ask-pip
 env.name = fourfront-cgapdev
 indexer.namespace = fourfront-cgapdev
 encoded_version = ${PROJECT_VERSION}
-eb_app_version = ${EB_APP_VERSION}
+eb_app_version = ${APP_VERSION}
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = true
