Add .elasticbeanstalk/saved_configs. These are configuration files that have been downloaded from AWS. They contain credentials and must not be checked in.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ elasticsearch-*.deb
 # Conventions vary, including env, venv, or longer names like cgap_env,
 # but typically they end in "env".
 *env/
+
+# Saved configurations from Elastic beanstalk that have been downloaded.
+.elasticbeanstalk/saved_configs/
+
