Fix labeling on the health page to look prettier, have help info, and appear to be in the right order.

--- a/development.ini
+++ b/development.ini
@@ -23,6 +23,8 @@ pyramid.default_locale_name = en
 # this line determines which load function is used in load_data
 # most deployments use: "load_test_data = encoded.loadxl:load_test_data"
 load_test_data = encoded.loadxl:load_local_data
+encoded_version = 100.200.300
+eb_app_version = app-v-development-simulation
 
 [pipeline:debug]
 pipeline =
