--- a/test.ini
+++ b/test.ini
@@ -9,7 +9,8 @@ indexer.processes =
 elasticsearch.server = 172.31.49.128:9872
 snovault.app_version = 1.3.0
 ga_config_location = ./src/encoded/static/ga_config.json
-
+encoded_version = 111.222.333
+eb_app_version = app-v-test-simulation
 create_tables = true
 load_test_data = encoded.loadxl:load_test_data
 
