C4-98 posting gene inserts

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ markers =
     indexing: mark a test as an indexing test
     performance: mark a test as a performance test
     working: mark a test as working
+    ingestion: mark as an ingestion test
