--- a/deploy/ini_files/cgap.ini
+++ b/deploy/ini_files/cgap.ini
@@ -7,18 +7,18 @@ blob_bucket = elasticbeanstalk-fourfront-cgap-blobs
 system_bucket = elasticbeanstalk-fourfront-cgap-system
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
-indexer.processes = $(python3 -c 'import multiprocessing; print(max(1, multiprocessing.cpu_count() - 2));')
 elasticsearch.server = search-fourfront-cgap-ewf7r7u2nq3xkgyozdhns4bkni.us-east-1.es.amazonaws.com:80
 snovault.app_version = ask-pip
 env.name = fourfront-cgap
-indexer.namespace = fourfront-cgap
 encoded_version = ${PROJECT_VERSION}
 eb_app_version = ${APP_VERSION}
+snovault_version = ${SNOVAULT_VERSION}
+utils_version = ${UTILS_VERSION}
 mpindexer = true
-indexer = true
+indexer = ${INDEXER}
+indexer.namespace = fourfront-cgap
 elasticsearch.aws_auth = true
 production = true
-
 load_test_data = encoded.loadxl:load_prod_data
 sqlalchemy.url = postgresql://${RDS_USERNAME}:${RDS_PASSWORD}@${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
 
