--- a/development.ini
+++ b/development.ini
@@ -11,7 +11,7 @@ load_test_only = true
 create_tables = true
 testing = true
 postgresql.statement_timeout = 20
-indexer.processes =
+# indexer.processes =
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = false
