--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ pyramid-retry = "1.0"
 pyramid-tm = "2.2.1"
 pyramid-translogger = "0.1"
 # TODO: Maybe think about moving these pytest things into dev-dependencies.
+# TODO: Pytest 4+ is used in some other modules. Putting this in dev-dependencies might eliminate conflicts about that.
 pytest = "2.9.2"
 pytest-cov = "2.2.1"
 pytest-exact-fixtures = "0.1"
@@ -130,7 +131,19 @@ xlwt = "1.2.0"
 [tool.poetry.dev-dependencies]
 # flask only for moto[server]
 flask = ">=1.1.1"
-moto = ">=1.3.14"
+# Here AND ELSEWHERE (related scripts), we WERE pinning use of moto 1.3.7, and then we upgraded today,
+# perhaps inappropriately.
+# I asked Will today why we're pinning that and he explained to me that above there (i.e., in version 1.3.8),
+# an SQS-related bug is introduced, and that we cannot upgrade versions until this bug is fixed.
+# His belief is that moto has not had a "true" release in months, so we will have to stick with this version.
+# I searched the web and see this bug introduced in 1.3.8 and allegedly fixed. -kmp 29-Apr-2020
+# https://github.com/spulec/moto/issues/2172
+# Here's another report that might be related and it's not clear if this is fixed:
+# https://gitmemory.com/issue/spulec/moto/2118/474917895
+# TODO: Investigate whether this bug is fixed. If it is, update the version.
+#       If not, get a reference to an open bug report here so we can check back periodically.
+# moto = ">=1.3.14"
+moto = "1.3.7"
 # # pytest = "4.5.0"
 # pytest = ""
 # # pytest-cov = "2.7.1"
