Adjust defaulting of indexer. Make sure snovault.app_version is being set right.

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,4 @@ elasticsearch-*.deb
 
 # Saved configurations from Elastic beanstalk that have been downloaded.
 .elasticbeanstalk/saved_configs/
-
+.elasticbeanstalk/app_versions/
