--- a/deploy/ini_files/any.ini
+++ b/deploy/ini_files/any.ini
@@ -8,7 +8,7 @@ system_bucket = elasticbeanstalk-${S3_BUCKET_ENV}-system
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = ${ES_SERVER}
-snovault.app_version = ask-pip
+snovault.app_version = ${APP_VERSION}
 env.name = ${BS_ENV}
 mirror.env.name = ${BS_MIRROR_ENV}
 encoded_version = ${PROJECT_VERSION}
