--- a/deploy/ini_files/cgap.ini
+++ b/deploy/ini_files/cgap.ini
@@ -8,7 +8,7 @@ system_bucket = elasticbeanstalk-fourfront-cgap-system
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgap-ewf7r7u2nq3xkgyozdhns4bkni.us-east-1.es.amazonaws.com:80
-snovault.app_version = ask-pip
+snovault.app_version = ${APP_VERSION}
 env.name = fourfront-cgap
 encoded_version = ${PROJECT_VERSION}
 eb_app_version = ${APP_VERSION}
