--- a/deploy/ini_files/cgaptest.ini
+++ b/deploy/ini_files/cgaptest.ini
@@ -8,7 +8,7 @@ system_bucket = elasticbeanstalk-fourfront-cgaptest-system
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgaptest-dxiczz2zv7f3nshshvevcvmpmy.us-east-1.es.amazonaws.com:80
-snovault.app_version = ask-pip
+snovault.app_version = ${APP_VERSION}
 env.name = fourfront-cgaptest
 encoded_version = ${PROJECT_VERSION}
 eb_app_version = ${APP_VERSION}
