--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ chardet = "3.0.4"
 colorama = "0.3.3"
 coverage = "4.0.3"
 dcicsnovault = "^2.2.0"
-dcicutils = ">=0.19.0,<1"
+dcicutils = "0.21.0b1"  # ">=0.21.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
@@ -114,6 +114,7 @@ subprocess-middleware = "0.3"
 toml = ">=0.10.0,<1"
 transaction = "2.4.0"
 translationstring = "1.3"
+uptime = ">=3.0.1,<4"
 urllib3 = "^1.24.3"
 venusian = "1.2.0"
 waitress = "1.2.0"
