--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -64,6 +64,11 @@ container_commands:
   0830_load_access_keys:
     command: "source /opt/python/run/venv/bin/activate && load-access-keys production.ini --app-name app >> /var/log/deploy.log"
     leader_only: true
+  0840_wipe_variants_and_genes:
+    command: "source /opt/python/run/venv/bin/activate && poetry run clear-variants-and-genes production.ini"
+  0850_ingest_latest_variants_and_genes:
+    command: "source /opt/python/run/venv/bin/activate && poetry run ingestion src/encoded/tests/data/variant_workbook/variant_table.csv src/encoded/schemas/annotation_field.json src/encoded/schemas/variant.json src/encoded/schemas/variant_sample.json src/encoded/tests/data/variant_workbook/test_vcf.vcf hms-dbmi hms-dbmi src/encoded/tests/data/variant_workbook/gene_table.csv src/encoded/schemas/gene_annotation_field.json src/encoded/schemas/gene.json src/encoded/tests/data/variant_workbook/gene_inserts_v0.4.4.json hms-dbmi hms-dbmi production.ini --post-variant-consequences --post-variants --post-gene-annotation-field-inserts --post-gene-inserts --app-name app"
+    leader_only: true
   0900_restart_apache:
     command: "sudo service httpd restart"
 
