--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 # after having done 'python setup_eb.py develop', at least on the beanstalk. It doesn't
 # sem to be needed locally. -kmp 17-Mar-2020
 name = "encoded"
-version = "1.5.0"
+version = "1.5.1"
 description = "Clinical Genomics Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -173,7 +173,7 @@ migrate-attachments-aws = "encoded.commands.migrate_attachments_aws:main"
 migrate-dataset-type = "encoded.commands.migrate_dataset_type:main"
 migrate-files-aws = "encoded.commands.migrate_files_aws:main"
 owl-to-items = "encoded.commands.generate_items_from_owl:main"
-profile = "encoded.commands.profile:main"
+profiler = "encoded.commands.profiler:main"
 purge-item-type = "encoded.commands.purge_item_type:main"
 run-upgrade-on-inserts = "encoded.commands.run_upgrader_on_inserts:main"
 spreadsheet-to-json = "encoded.commands.spreadsheet_to_json:main"
@@ -186,6 +186,9 @@ ingest-vcf = "encoded.commands.ingest_vcf:main"
 variant-ingestion = "encoded.commands.variant_ingestion:main"
 gene-table-intake = "encoded.commands.gene_table_intake:main"
 ingest-genes = "encoded.commands.ingest_genes:main"
+gene-ingestion = "encoded.commands.gene_ingestion:main"
+ingestion = "encoded.commands.ingestion:main"
+clear-variants-and-genes = "encoded.commands.clear_variants_and_genes:main"
 
 [paste.app_factory]
 main = "encoded:main"
