--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,14 +44,12 @@ botocore = "^1.13.46"
 certifi = "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
-coverage = "4.0.3"
-dcicsnovault = "2.2.0"
-dcicutils = ">=0.15.0,<1"
+dcicsnovault = "^2.2.1"
+dcicutils = ">=0.22.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
 execnet = "1.4.1"
-flaky = "3.6.1"
 future = "0.15.2"
 humanfriendly = "1.44.5"
 hupper = "1.5"
@@ -83,20 +81,11 @@ pyramid-multiauth = "0.8.0"
 pyramid-retry = "1.0"
 pyramid-tm = "2.2.1"
 pyramid-translogger = "0.1"
-# TODO: Maybe think about moving these pytest things into dev-dependencies.
-pytest = "2.9.2"
-pytest-cov = "2.2.1"
-pytest-exact-fixtures = "0.1"
-pytest-instafail = "0.3.0"
-pytest-mock = "0.11.0"
-pytest-timeout = "1.0.0"
-pytest-xdist = "1.14"
 python-dateutil = "2.5.3"
 python-magic = "0.4.12"
 pytz = ">=2016.3"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
-"repoze.debug" = "1.0.2"
 requests = "^2.21.0"
 rfc3987 = "^1.3.6"
 rsa = "3.3"
@@ -128,6 +117,9 @@ xlwt = "1.2.0"
 
 
 [tool.poetry.dev-dependencies]
+# coverage = "4.0.3"
+coverage = "^4.1"
+flaky = "3.6.1"
 # flask only for moto[server]
 flask = ">=1.1.1"
 moto = ">=1.3.14"
@@ -145,6 +137,17 @@ moto = ">=1.3.14"
 # # coverage = "4.5.4"
 # coverage = ""
 # responses = "^0"
+# TODO: Maybe think about moving these pytest things into dev-dependencies.
+# TODO: Pytest 4+ is used in some other modules. Putting this in dev-dependencies might eliminate conflicts about that.
+pytest = "^2.9.2"
+pytest-cov = "^2.2.1"
+# pytest-exact-fixtures = "0.1"
+pytest-exact-fixtures = ">=0.1,<1"
+pytest-instafail = "^0.3.0"
+pytest-mock = ">=0.11.0,<1"
+pytest-timeout = "^1.0.0"
+pytest-xdist = "1.14"
+"repoze.debug" = "1.0.2"
 
 [tool.poetry.scripts]
 # snovault commands
