--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ submit4dn = "0.9.7"
 subprocess-middleware = "0.3"
 # Useful for picking apart pyproject.toml
 toml = ">=0.10.0,<1"
+tqdm = "^4.46.0"
 transaction = "2.4.0"
 translationstring = "1.3"
 uptime = ">=3.0.1,<4"
