C4-157 hook in lib with fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ pytest-xdist = "1.14"
 python-dateutil = "2.5.3"
 python-magic = "0.4.12"
 pytz = ">=2016.3"
-PyVCF = "0.6.8"
+dcic_pyVCF = "1.0.0"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
 "repoze.debug" = "1.0.2"
