--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,19 +33,18 @@ classifiers = [
     # Specify the Python versions you support here. In particular, ensure
     # that you indicate whether you support Python 2, Python 3 or both.
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.5',
     'Programming Language :: Python :: 3.6'
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.5,<3.7"
+python = ">=3.6,<3.7"
 boto3 = "^1.10.46"
 botocore = "^1.13.46"
 certifi = "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
 coverage = "4.0.3"
-dcicsnovault = "^2.2.1"
+dcicsnovault = "3.0.0b0"  # ">=3.0.0,<4"
 dcicutils = ">=0.23.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
@@ -94,7 +93,7 @@ pytest-timeout = "1.0.0"
 pytest-xdist = "1.14"
 python-dateutil = "2.5.3"
 python-magic = "0.4.12"
-pytz = ">=2016.3"
+pytz = ">=2020.1"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
 "repoze.debug" = "1.0.2"
