--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.4",
-    "@hms-dbmi-bgm/shared-portal-components": "github:4dn-dcic/shared-portal-components#0.0.2.63.1",
+    "@hms-dbmi-bgm/shared-portal-components": "github:4dn-dcic/shared-portal-components#0.0.2.63.2",
     "babel-polyfill": "^6.26.0",
     "d3": "^5.16.0",
     "detect-browser": "^3.0.1",
@@ -123,7 +123,7 @@
     "react-jsx-parser": "^1.23.0",
     "react-redux": "^6.0.1",
     "react-tooltip": "^3.11.6",
-    "react-transition-group": "4.3.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^3.7.0",
     "subprocess-middleware": "^0.1.0",
     "underscore": "^1.10.2"
