C4-98 mark purge_item_type tests as broken for Travis, upgrade postgres to 11.1

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ markers =
     performance: mark a test as a performance test
     working: mark a test as working
     ingestion: mark as an ingestion test
+    broken: mark as a 'broken' test that does not run on Travis
