--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ certifi = "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
 coverage = "4.0.3"
-dcicsnovault = "3.0.0b0"  # ">=3.0.0,<4"
+dcicsnovault = "3.0.0b4"  # ">=3.0.0,<4"
 dcicutils = ">=0.23.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
@@ -92,7 +92,8 @@ pytest-mock = "0.11.0"
 pytest-timeout = "1.0.0"
 pytest-xdist = "1.14"
 python-dateutil = "2.5.3"
-python-magic = "0.4.12"
+# python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
+python-magic = "0.4.15"
 pytz = ">=2020.1"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
