--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,14 +43,12 @@ botocore = "^1.13.46"
 certifi = "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
-coverage = "4.0.3"
 dcicsnovault = ">=3.0.0,<4"
 dcicutils = ">=0.23.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
 execnet = "1.4.1"
-flaky = "3.6.1"
 future = "0.15.2"
 humanfriendly = "1.44.5"
 hupper = "1.5"
@@ -82,22 +80,12 @@ pyramid-multiauth = "0.8.0"
 pyramid-retry = "1.0"
 pyramid-tm = "2.2.1"
 pyramid-translogger = "0.1"
-# TODO: Maybe think about moving these pytest things into dev-dependencies.
-# TODO: Pytest 4+ is used in some other modules. Putting this in dev-dependencies might eliminate conflicts about that.
-pytest = "2.9.2"
-pytest-cov = "2.2.1"
-pytest-exact-fixtures = "0.1"
-pytest-instafail = "0.3.0"
-pytest-mock = "0.11.0"
-pytest-timeout = "1.0.0"
-pytest-xdist = "1.14"
 python-dateutil = "2.5.3"
 # python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
 python-magic = "0.4.15"
 pytz = ">=2020.1"
 rdflib = "4.2.2"
 rdflib-jsonld = "0.3"
-"repoze.debug" = "1.0.2"
 requests = "^2.21.0"
 rfc3987 = "^1.3.6"
 rsa = "3.3"
@@ -129,6 +117,9 @@ xlwt = "1.2.0"
 "zope.sqlalchemy" = "^1.2"
 
 [tool.poetry.dev-dependencies]
+# coverage = "^4.1"
+coverage = "4.0.3"
+flaky = "3.6.1"
 # flask only for moto[server]
 flask = ">=1.1.1"
 # Here AND ELSEWHERE (related scripts), we WERE pinning use of moto 1.3.7, and then we upgraded today,
@@ -144,6 +135,17 @@ flask = ">=1.1.1"
 #       If not, get a reference to an open bug report here so we can check back periodically.
 # moto = ">=1.3.14"
 moto = "1.3.7"
+# TODO: Maybe think about moving these pytest things into dev-dependencies.
+# TODO: Pytest 4+ is used in some other modules. Putting this in dev-dependencies might eliminate conflicts about that.
+pytest = "2.9.2"
+# pytest-cov 2.6.0 exists
+pytest-cov = "2.2.1"
+pytest-exact-fixtures = "0.1"
+pytest-instafail = "0.3.0"
+pytest-mock = "0.11.0"
+# pytest-timeout 1.2.1 exists
+pytest-timeout = "1.0.0"
+pytest-xdist = "1.14"
 # # pytest = "4.5.0"
 # pytest = ""
 # # pytest-cov = "2.7.1"
@@ -157,6 +159,7 @@ moto = "1.3.7"
 # flake8 = ""
 # # coverage = "4.5.4"
 # coverage = ""
+"repoze.debug" = "1.0.2"
 # responses = "^0"
 
 [tool.poetry.scripts]
