--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ translationstring = "1.3"
 uptime = ">=3.0.1,<4"
 urllib3 = "^1.24.3"
 venusian = "1.2.0"
-waitress = "1.2.0"
+waitress = "1.2.0"  # 1.4.3 had lots of problems, so pin this -kmp 18-May-2020
 WebOb = "1.8.5"
 WebTest = "^2.0.21"
 wheel = "0.29.0"
@@ -114,7 +114,7 @@ xlrd = "^1.0.0"
 xlwt = "1.2.0"
 "zope.deprecation" = "4.4.0"
 "zope.interface" = "4.6.0"
-"zope.sqlalchemy" = "^1.2"
+"zope.sqlalchemy" = "1.3"
 
 [tool.poetry.dev-dependencies]
 coverage = ">=4.1"  # was "4.0.3 (4.5.4 might work, too)
