--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ plaster = "1.0"
 plaster-pastedeploy = "0.6"
 psutil = "^4.3.0"
 psycopg2-binary = "2.7.7"
-py = "^1.4.31"  # was "1.4.31"
+py = "^1.8.1"  # was "1.4.31" (used by pytest, not sure if elsewhere)
 pyasn1 = "0.1.9"
 PyBrowserID = "0.10.0"
 pycparser = "2.14"
@@ -117,7 +117,7 @@ xlwt = "1.2.0"
 "zope.sqlalchemy" = "1.3"
 
 [tool.poetry.dev-dependencies]
-coverage = ">=4.1"  # was "4.0.3 (4.5.4 might work, too)
+coverage = "5.1"  # was "4.0.3 (4.5.4 might work, too)
 flake8 = "^3.7.8"
 flaky = "3.6.1"
 # flask only for moto[server]
