--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 # after having done 'python setup_eb.py develop', at least on the beanstalk. It doesn't
 # sem to be needed locally. -kmp 17-Mar-2020
 name = "encoded"
-version = "1.9.2"
+version = "1.9.3"
 description = "Clinical Genomics Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -44,7 +44,7 @@ certifi = ">=2020.4.5.1"  # was "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
 dcicsnovault = ">=3.0.0,<4"
-dcicutils = ">=0.23.0,<1"
+dcicutils = ">=0.25.0,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "5.4.0"
@@ -58,11 +58,11 @@ jmespath = "0.9.0"
 jsonschema-serialize-fork = "2.1.1"
 keepalive = "0.5"
 loremipsum = "1.0.5"
-netaddr = "0.7.18"
+netaddr = "0.7.19"
 passlib = "1.6.5"
 PasteDeploy = "1.5.2"
 pbkdf2 = "1.3"
-Pillow = "3.1.1"
+Pillow = "3.1.1"  # Higher version might be causing a problem
 plaster = "1.0"
 plaster-pastedeploy = "0.6"
 psutil = "^4.3.0"
@@ -73,8 +73,7 @@ PyBrowserID = "0.10.0"
 pycparser = "2.14"
 PyJWT = "1.5.3"
 pyparsing = "^2.4.7"  # was "2.1.1"
-# Strange that pyramid is not needed explicitly. Maybe it just comes in with the others. -kmp 9-Apr-2020
-# pyramid = "1.10.1"
+pyramid = "1.10.4"
 pyramid-localroles = "0.1"
 pyramid-multiauth = "0.8.0"
 pyramid-retry = "1.0"
@@ -94,7 +93,6 @@ s3transfer = "^0.2.0"
 simplejson = "^3.17.0"
 SPARQLWrapper = "1.7.6"
 SQLAlchemy = "1.2.16"
-# strict-rfc3339 = "0.6"
 structlog = ">=18.1.0,<20"
 submit4dn = "0.9.7"
 subprocess-middleware = "0.3"
@@ -117,13 +115,12 @@ xlwt = "1.2.0"
 "zope.sqlalchemy" = "1.3"
 
 [tool.poetry.dev-dependencies]
-coverage = "5.1"  # was "4.0.3 (4.5.4 might work, too)
+coverage = "5.1"  # was "4.0.3" (4.5.4 might work, too)
 flake8 = "^3.7.8"
 flaky = "3.6.1"
 # flask only for moto[server]
 flask = ">=1.1.1"
-# Here AND ELSEWHERE (related scripts), we WERE pinning use of moto 1.3.7, and then we upgraded today,
-# perhaps inappropriately.
+# Here AND ELSEWHERE (related scripts), we pin use of moto 1.3.7.
 # I asked Will today why we're pinning that and he explained to me that above there (i.e., in version 1.3.8),
 # an SQS-related bug is introduced, and that we cannot upgrade versions until this bug is fixed.
 # His belief is that moto has not had a "true" release in months, so we will have to stick with this version.
@@ -133,14 +130,12 @@ flask = ">=1.1.1"
 # https://gitmemory.com/issue/spulec/moto/2118/474917895
 # TODO: Investigate whether this bug is fixed. If it is, update the version.
 #       If not, get a reference to an open bug report here so we can check back periodically.
-# moto = ">=1.3.14"
 moto = "1.3.7"
 pytest = "4.5.0"  # was "2.9.2"
 pytest-cov = "2.8.1"  # was "2.2.1"  (2.7.1 might also work)
 pytest-exact-fixtures = "0.3"  # was "0.1"
 pytest-instafail = "0.4.1"  # was "0.3.0"
 pytest-mock = "3.1.0"  # was "0.11.0" (1.10.4 might also work)
-# pytest-runner = "5.1" was long ago explicit but should autoload
 pytest-timeout = "1.3.4"  # was "1.0.0"
 pytest-xdist = ">=1.14"  # was "1.14"
 "repoze.debug" = "1.1"  # was "1.0.2"
