--- a/test.ini
+++ b/test.ini
@@ -5,11 +5,12 @@ file_upload_bucket = elasticbeanstalk-encoded-4dn-files
 blob_bucket = elasticbeanstalk-encoded-4dn-blobs
 #blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.test_accession
-# indexer.processes =
 elasticsearch.server = 172.31.49.128:9872
 snovault.app_version = 1.3.0
 ga_config_location = ./src/encoded/static/ga_config.json
 encoded_version = 111.222.333
+snovault_version = 222.333.444
+utils_version = 333.444.555
 eb_app_version = app-v-test-simulation
 create_tables = true
 load_test_data = encoded.loadxl:load_test_data
