--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ addopts =
     -p encoded.tests deploy.tests
     --instafail
 markers =
+    broken: mark as a 'broken' test that does not run on Travis
     es: mark a test as an elastic search test (deselect with '-m "not es"')
     indexing: mark a test as an indexing test (deselect with '-m "not indexing"')
     ingestion: mark a test as an ingestion test (deselect with '-m "not ingestion"')
@@ -12,4 +13,3 @@ markers =
     storage: mark a test as about storage (deselect with '-m "not storage"')
     working: mark a test as working (deselect with '-m "not working"')
 norecursedirs = *env site-packages .cache .git .idea *.egg-info
-
