Fix fixture declarations. Get rid of need for bin/test shim. Remove it in .travis.yml and Makefile.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts =
-    --pyargs encoded.tests deploy.tests
-    -p encoded.tests deploy.tests
+    -p encoded.tests.datafixtures
+    -p snovault.tests.serverfixtures
     --instafail
 markers =
     broken: mark as a 'broken' test that does not run on Travis
