--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
 # sem to be needed locally. -kmp 17-Mar-2020
 name = "encoded"
 version = "2.0.7"
-description = "Clinical Genomics Analysis Platform"
+description = "Clinical Genomics Analysis Platform (CGAP)"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
 readme = "README.rst"
