Adjust pytest.ini to better document marks and add some TODO items.

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,10 +9,10 @@ markers =
     indexing: mark a test as an indexing test (deselect with '-m "not indexing"')
     ingestion: mark a test as an ingestion test (deselect with '-m "not ingestion"')
     performance: mark a test as a performance test (deselect with '-m "not performance"')
-    schema: ...
-    setone: ...
+    schema: mark a test as a schema-related test (deselect with '-m "not schema"')
+    setone: (deprecated) instead of '-m "setone"', please use '-m "not indexing"', TODO: refs and scripts to be rewritten
     slow: mark a test as slow (deselect with '-m "not slow"')
     storage: mark a test as about storage (deselect with '-m "not storage"')
-    work: ...
+    work: (deprecated) instead of '-m "work"', please prefer '-m "working"', TODO: refs and scripts to be rewritten
     working: mark a test as working (deselect with '-m "not working"')
 norecursedirs = *env site-packages .cache .git .idea *.egg-info
