--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 addopts =
-    --pyargs encoded.tests deploy.tests
-    -p encoded.tests deploy.tests
+    -p encoded.tests.datafixtures
+    -p snovault.tests.serverfixtures
+    --timeout=400
     --instafail
 markers =
     broken: mark as a 'broken' test that does not run on Travis
