Revert how fixtures are declared to try to clear compile issues. Save that part for the PyCharm fix.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 addopts =
-    -p encoded.tests.datafixtures
-    -p snovault.tests.serverfixtures
-    --timeout=400
+    --pyargs encoded.tests deploy.tests
+    -p encoded.tests deploy.tests
+#   -p encoded.tests.datafixtures
+#   -p snovault.tests.serverfixtures
     --instafail
 markers =
     broken: mark as a 'broken' test that does not run on Travis
