Adjust 'make test' to do the same as it would on Travis, implicitly causing purge-related tests that are failing to not be run, so at least local 'make test' is predictive of what travis will do. Use 'make test-any' to see those tests get run. I added doc in 'make info'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,7 @@ before_script:
 - configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
 # setone is essentially all tests that are not indexing; change here for clarity
-- travis_wait 30 bin/test -v -v --aws-auth -m "working" --durations=10
-  --cov src/encoded --es search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80;
+- make travis-test
 after_script:
 - echo leader=$BUILD_LEADER status=$BUILD_AGGREGATE_STATUS
 - wipe-test-indices $TRAVIS_JOB_ID search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
