Various non-controversial changes backported from the pytest 4.5 branch.

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ markers =
     indexing: mark a test as an indexing test (deselect with '-m "not indexing"')
     ingestion: mark a test as an ingestion test (deselect with '-m "not ingestion"')
     performance: mark a test as a performance test (deselect with '-m "not performance"')
+    schema: mark a test as a schema-related test (deselect with '-m "not schema"')
     slow: mark a test as slow (deselect with '-m "not slow"')
     storage: mark a test as about storage (deselect with '-m "not storage"')
     working: mark a test as working (deselect with '-m "not working"')
