--- a/development.ini
+++ b/development.ini
@@ -11,7 +11,6 @@ load_test_only = true
 create_tables = true
 testing = true
 postgresql.statement_timeout = 20
-# indexer.processes =
 mpindexer = true
 indexer = true
 elasticsearch.aws_auth = false
@@ -24,6 +23,8 @@ pyramid.default_locale_name = en
 # most deployments use: "load_test_data = encoded.loadxl:load_test_data"
 load_test_data = encoded.loadxl:load_local_data
 encoded_version = 100.200.300
+snovault_version = 200.300.400
+utils_version = 300.400.500
 eb_app_version = app-v-development-simulation
 
 [pipeline:debug]
