--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -64,6 +64,9 @@ container_commands:
   0830_load_access_keys:
     command: "source /opt/python/run/venv/bin/activate && load-access-keys production.ini --app-name app >> /var/log/deploy.log"
     leader_only: true
+  0840_start_ingestion_listener:
+    command: "source /opt/python/run/venv/bin/activate && ingestion-listener production.ini --app-name app &"
+    leader_only: true
   0900_restart_apache:
     command: "sudo service httpd restart"
 
