C4-203 add file_format, nohup ingestion listener

--- a/.ebextensions/20_packages.config
+++ b/.ebextensions/20_packages.config
@@ -65,7 +65,7 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && load-access-keys production.ini --app-name app >> /var/log/deploy.log"
     leader_only: true
   0840_start_ingestion_listener:
-    command: "source /opt/python/run/venv/bin/activate && ingestion-listener production.ini --app-name app &"
+    command: "source /opt/python/run/venv/bin/activate && nohup ingestion-listener production.ini --app-name app &"
     leader_only: true
   0900_restart_apache:
     command: "sudo service httpd restart"
