basic setup for production indexer, will probably fail

--- a/.ebextensions/05_set_wsgi.config
+++ b/.ebextensions/05_set_wsgi.config
@@ -107,6 +107,10 @@ files:
       WSGIDaemonProcess encoded-indexer user=wsgi group=wsgi threads=1 python-path=/opt/python/current/app:/opt/python/run/venv/lib64/python3.6/site-packages:/opt/python/run/venv/lib/python3.6/site-packages display-name=encoded-indexer
       WSGIScriptAlias /_indexer /opt/python/current/app/parts/production-indexer/wsgi process-group=encoded-indexer application-group=%{GLOBAL}
 
+      # Ingestion listener
+      WSGIDaemonProcess encoded-ingestion-listener user=wsgi group=wsgi threads=1 python-path=/opt/python/current/app:/opt/python/run/venv/lib64/python3.6/site-packages:/opt/python/run/venv/lib/python3.6/site-packages display-name=encoded-ingestion-listener
+      WSGIScriptAlias /_ingestion_listener /opt/python/current/app/parts/production-ingestion-listener/wsgi process-group=encoded-ingestion-listener application-group=%{GLOBAL}
+
       # https://github.com/GrahamDumpleton/mod_wsgi/issues/2
       # Try Graham Dumpleton's fix since we have upgraded WSGI
       # Original fix (next 3 lines)
