--- a/base.ini
+++ b/base.ini
@@ -53,6 +53,12 @@ timeout = 60
 set embed_cache.capacity = 5000
 set indexer = true
 
+[composite:ingester]
+use = egg:encoded#ingestion_listener
+app = app
+path = /ingest
+timeout = 60
+
 [filter:memlimit]
 use = egg:encoded#memlimit
 rss_limit = 500MB
