C4-203 bugfix kwarg, provision correctly in ini files

--- a/base.ini
+++ b/base.ini
@@ -54,7 +54,7 @@ set embed_cache.capacity = 5000
 set indexer = true
 
 [composite:ingester]
-use = egg:encoded#ingestion_listener
+use = egg:encoded#ingester
 app = app
 path = /ingest
 timeout = 60
