--- a/deploy/ini_files/cgapdev.ini
+++ b/deploy/ini_files/cgapdev.ini
@@ -26,6 +26,9 @@ sqlalchemy.url = postgresql://${RDS_USERNAME}:${RDS_PASSWORD}@${RDS_HOSTNAME}:${
 [composite:indexer]
 use = config:base.ini#indexer
 
+[composite:ingester]
+use = config:base.ini#ingester
+
 [pipeline:main]
 pipeline =
     config:base.ini#memlimit
