Try with latest Snovault except patched so RateManager is traded out for LockoutManager.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ certifi = ">=2020.4.5.2"
 chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = "3.1.4"  # ">=3.1.8,<4"
+dcicsnovault = "3.1.8.1b1"  # ">=3.1.8,<4"
 dcicutils = ">=0.35.1,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
