Tweaks for initial processing shared and diff between hpoa file and monarch genes to dis

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,6 +161,7 @@ dis2pheno = "encoded.commands.parse_hpoa:main"
 es-index-data = "encoded.commands.es_index_data:main"
 export-data = "encoded.commands.export_data:main"
 extract-test-data = "encoded.commands.extract_test_data:main"
+gene2dis = "encoded.commands.parse_monarch_g2d:main"
 import-data = "encoded.commands.import_data:main"
 jsonld-rdf = "encoded.commands.jsonld_rdf:main"
 load-access-keys = "encoded.commands.load_access_keys:main"
